...
                }
            }
            .searchable(text: $searchText, prompt: "Search launches")
            .onChange(of: searchText) { newValue in
                searchSubject.send(newValue)
            }
            .navigationTitle("Space Launches")
        }
        .onAppear {
            setupDebouncing()
        }
    }
    
...
