...
                        }
                }
                
                List(_pictures) { picture in
                    HomePictureSection(picture: picture)
                }
                .navigationTitle("Space Pictures")
                .toolbar {
                    ToolbarItem(placement: .navigationBarTrailing) {
                        Button(action: loadAPODData) {
                            Image(systemName: "arrow.clockwise")
                        }
                        .disabled(isLoading)
...
